<resources>
    <string name="app_name">Tennis Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="name">Name</string>
    <string name="new_match">New Match</string>
    <string name="sets">Sets</string>
    <string name="games_per_set">Games p/ Set</string>
    <string name="create_new_match">Create New Match</string>
    <string name="exit">Exit</string>
    <string name="start_point">Start Point</string>
    <string name="serve">Serve Outcome</string>
    <string name="continue_point">Continue</string>
    <string name="ace">Ace</string>
    <string name="fault">Fault</string>
    <string name="let">Let</string>
    <string name="won_point">Won Point</string>
    <string name="lost_point">Lost Point</string>
    <string name="winner">Winner</string>
    <string name="forced_error">Forced Error</string>
    <string name="unforced_error">Unforced Error</string>
    <string name="forehand">Forehand</string>
    <string name="backhand">Backhand</string>
    <string name="finish_point">Finish Point</string>
    <string name="net">Net</string>
    <string name="no_mans_land">No Man\'s Land</string>
    <string name="baseline">Baseline</string>


    <string-array name="sets_per_match">
        <item>1</item>
        <item>3</item>
        <item>5</item>
    </string-array>
    <string-array name="games_per_set">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
