<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PointOutcomeActivity"
    tools:layout_editor_absoluteY="81dp">

    <TableLayout
        android:id="@+id/tableLayout_won"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_weight="0"
            android:gravity="center">

            <ToggleButton
                android:id="@+id/toggleButton_point_wonlost"
                android:layout_width="142dp"
                android:layout_height="67dp"
                android:checked="true"
                android:textOff="@string/lost_point"
                android:textOn="@string/won_point"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout_won"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center">

            <Switch
                android:id="@+id/switch_winner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:splitTrack="false"
                android:text="@string/winner"
                tools:checked="false" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:gravity="center">

            <RadioGroup
                android:id="@+id/radioGroup_rightleft_hand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forehand" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/backhand" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinner_shot_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:spinnerMode="dialog" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:gravity="center">


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButton_net"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/net" />

                <RadioButton
                    android:id="@+id/radioButton_nomansland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no_mans_land" />

                <RadioButton
                    android:id="@+id/radioButton_baseline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/baseline" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center">

            <RadioGroup
                android:id="@+id/radioGroup_errors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_forced_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forced_error" />

                <RadioButton
                    android:id="@+id/radioButton_unforced_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unforced_error" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:gravity="center">

            <Button
                android:id="@+id/button_finish_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_point" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>