<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServeOutcomeActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/serve"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="184dp"
        android:layout_marginEnd="62dp"
        android:layout_marginStart="62dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/continue_point"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_fault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_ace"
        android:layout_width="0dp"
        android:layout_height="119dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/ace"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_fault"
        app:layout_constraintEnd_toStartOf="@+id/button_let"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_continue" />

    <Button
        android:id="@+id/button_fault"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="62dp"
        android:layout_marginStart="62dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/fault"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_continue" />

    <Button
        android:id="@+id/button_let"
        android:layout_width="0dp"
        android:layout_height="119dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="62dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/let"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_fault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_ace"
        app:layout_constraintTop_toBottomOf="@+id/button_continue" />
</android.support.constraint.ConstraintLayout>