<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchMainPageActivity"
    tools:layout_editor_absoluteY="81dp">

    <TableLayout
        android:id="@+id/tableLayout_scoreboard"
        android:layout_width="129dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:layout_marginTop="16dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:gravity="right"
                android:text="@string/player_1" />

            <TextView
                android:layout_column="2"
                android:gravity="left"
                android:text="@string/player_2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:gravity="right"
                android:text="15"
                android:textSize="50sp" />

            <TextView
                android:layout_height="match_parent"
                android:layout_column="1"
                android:gravity="center"
                android:text=":"
                android:textSize="30sp" />

            <TextView
                android:layout_column="2"
                android:gravity="left"
                android:text="40"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:gravity="right"
                android:text="3"
                android:textSize="36sp" />

            <TextView
                android:layout_height="match_parent"
                android:layout_column="1"
                android:gravity="center"
                android:text=":"
                android:textSize="24sp" />

            <TextView
                android:layout_column="2"
                android:gravity="left"
                android:text="5"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:gravity="right"
                android:text="0"
                android:textSize="24sp" />

            <TextView
                android:layout_height="match_parent"
                android:layout_column="1"
                android:gravity="center"
                android:text=":" />

            <TextView
                android:layout_column="2"
                android:gravity="left"
                android:text="0"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_start_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/start_point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        app:layout_constraintBottom_toTopOf="@+id/button_start_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout_scoreboard">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>